# Latte-compiler

./: .gitignore  Cargo.toml  Makefile  README  build_grammar.sh  tips.txt
lattests/wp/bad/parse/: arrays_structs.lat
lattests/wp/good/: arrays_structs.lat  error_returns.lat  ssa.lat
lib/: runtime.c
src/backend/: asmgen.rs  compiler.rs  interpreter.rs  ir.rs  mod.rs  ra.rs
src/backend/ir/: gen.rs  liveness.rs  mod.rs  opts.rs  ra.rs
src/frontend/: mod.rs  semantic_analysis.rs
src/frontend/parser/: Latte.interp  Latte.tokens  LatteLexer.interp  LatteLexer.tokens  lattelexer.rs  lattelistener.rs  latteparser.rs  lattevisitor.rs  mod.rs
src/frontend/semantic_analysis/: antlr_to_ast.rs  ast.rs  env.rs  mod.rs  type_analysis.rs
src/grammars/daniel/: Latte.g4
src/grammars/ext/: Latte.g4
src/grammars/moodle/: Latte.g4
tests/: backend_test.rs  frontend_test.rs  parse_test.rs
