[package]
name = "latte"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
codegen-units = 1
lto = true
panic = "abort"

[dependencies]
either = "1.8.0"
owned_chars = "0.3.2"
antlr-rust = "0.3.0-beta"
better_any = "0.2.0"